--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.24.6",
     "@babel/node": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
+    "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0"
   },
